# music-sys-playback-engine

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  build.bat  justfile
music-sys-playback-engine/: CMakeLists.txt
music-sys-playback-engine/audio/: audio_app.h  audio_main.cpp  audio_main.h  audio_service.cpp  audio_service.h  sine_test.h  wasapi_client.cpp  wasapi_client.h
music-sys-playback-engine/audio/audio_app/: audio_app.h  sample_player.h  seq.h  seq_clock.h  wave_player.h
music-sys-playback-engine/audio/audio_system/: audio_constants.h  audio_main.h  audio_service.cpp  audio_util.h  sample_buffer.h  wasapi_client.cpp
music-sys-playback-engine/main/: constants.h  music_sys_playback_engine.cpp  music_sys_playback_engine.h  util.h  wave_reader.h
music-sys-playback-engine/shared_data/: shared_data.h
